adicionada a seção de playlist com frase de saudação, ainda sem as playlists disponíveis

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
 
-
     <body>
         <div class="sidebar">
             <nav class="sidebar_navigation">
@@ -91,6 +90,16 @@
                         <button class="login">Entrar</button>
                     </div>
                 </nav>
+            
+       
+                <div class="navigation_section">
+                    <div id="resut-playlists">
+                        <div class="playlist-greeting">
+                            <h1 id="greeting">Boas vindas</h1>
+                            <h2 class="greeting-subtitle">Navegar por todas as seções</h2>
+                        </div>  
+                    </div>
+                </div>
             </div>
         </main>
 
